--- a/package.json
+++ b/package.json
@@ -11,16 +11,25 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.4",
-    "@types/node": "20.5.3",
-    "jest": "^29.6.3",
-    "ts-jest": "^29.1.1",
-    "aws-cdk": "2.93.0",
+    "@types/aws-lambda": "^8.10.124",
+    "@types/jest": "^27.5.2",
+    "@types/node": "10.17.27",
+    "@types/prettier": "2.6.0",
+    "aws-cdk": "^2.110.0",
+    "jest": "^27.5.1",
+    "parcel-plugin-externals": "^0.5.2",
+    "ts-jest": "^27.1.4",
     "ts-node": "^10.9.1",
-    "typescript": "~5.1.6"
+    "typescript": "~3.9.7"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.93.0",
-    "constructs": "^10.0.0"
+    "@aws-sdk/client-bedrock-runtime": "^3.436.0",
+    "aws-cdk-lib": "^2.110.0",
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1472.0",
+    "constructs": "^10.0.0",
+    "esbuild": "^0.19.4",
+    "lambda-stream": "^0.5.0",
+    "source-map-support": "^0.5.21"
   }
 }
